dhcp/nettools: accept missing "subnet mask" (option 1) in DHCP lease

Do the same as dhclient plugin in nm_dhcp_utils_ip4_config_from_options().

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/1037